# SmallBenchmarks

./: README.md
lua/: CMakeLists.txt  run.sh
minisat/: CMakeLists.txt  run.sh
sqlite3/: CMakeLists.txt  run.sh
